k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo
  labels:
      app: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
    - name: app
      # Se reemplaza por Kustomize en overlay: 'app' -> ECR URI:TAG
      image: app:v1.0.0
      imagePullPolicy: Always
      ports:
        - containerPort: 8000
      readinessProbe:
        httpGet:
          path: /healthz
          port: 8000
        initialDelaySeconds: 5
        periodSeconds: 5
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8000
        initialDelaySeconds: 10
        periodSeconds: 10
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 300m
          memory: 256Mi
